k8s/fixed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: celonis
  namespace: "celonis"
  labels:
    app.kubernetes.io/name: celonis
    app.kubernetes.io/instance: celonis
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: celonis
    app.kubernetes.io/instance: celonis
